--- a/package.json
+++ b/package.json
@@ -16,8 +16,11 @@
   "devDependencies": {
     "@types/node": "^16.4.0",
     "@types/react": "17.0.14",
+    "autoprefixer": "^10.3.1",
     "eslint": "7.31.0",
     "eslint-config-next": "11.0.1",
+    "postcss": "^8.3.6",
+    "tailwindcss": "^2.2.6",
     "typescript": "4.3.5"
   }
 }
